[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/coolvetica rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Intermission.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Instructions" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = 64.0
margin_right = 1008.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( -336, 32 )
custom_fonts/font = SubResource( 1 )
text = "Nice Job!

Please take a break to make sure you're not too burnt out since we have another 5 minutes of questions!

During this  final section, we'll be testing a quantum-based calculator algorithm. The computation time may be slightly longer, but the answer will always be correct."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 384.0
margin_top = 520.0
margin_right = 640.0
margin_bottom = 584.0
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonTimer" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="buttonTimer" to="." method="_on_buttonTimer_timeout"]
